# strongly-typed-thoughts.net

./: .gitignore  Dockerfile  LICENSE  README.md  Setup.hs  bootstrap.sh  package-lock.json  package.json  phaazon-net.cabal  phaazon.net.cabal  server-dev.toml  server.toml  server.yaml  skypers.io.cabal  stack.yaml  tailwind.config.js
.github/workflows/: ci.yaml
api/: LICENSE  api.cabal  api.json  server.yaml
api/front/: index.html
api/src/: API.hs  Blog.hs  Config.hs  Feed.hs  JSON.hs  Main.hs  Markup.hs  Routes.hs  State.hs  Upload.hs  XML.hs
app/: Blog.hs  Feed.hs  FileBrowser.hs  GPG.hs  Home.hs  Main.hs  Markdown.hs  Markup.hs  Portfolio.hs  ServerConfig.hs  WebApp.hs  Webapp.hs  Wrapper.hs  XML.hs
assets/css/: style.css
assets/markdown/: about.md  contact.md  home.md  portfolio.md
backend/: CHANGELOG.md  backend.cabal  backend.json
backend/front/: index.js
backend/frontend/: index.html  index.js
backend/src/: API.hs  Blog.hs  Config.hs  Feed.hs  Main.hs  Routes.hs  State.hs  Upload.hs
db/: CreateSchema.hs  CreateSchema.sql  local.db
front/: README.md  index.html  index.js  packages.dhall  spago.dhall
front/src/: API.purs  Main.purs
front/src/component/: AboutMe.purs  Blog.purs  SPA.purs  Tile.purs
frontend/: README.md  index.html  index.js  packages.dhall  spago.dhall
frontend/src/: API.purs  HTMLHelper.purs  JSON.purs  Main.purs  Router.purs
frontend/src/component/: AboutMe.purs  Blog.purs  Browse.purs  Child.purs  SPA.purs
media/blog/: abstracting_over_shader.md  abstracting_over_shader_environment.md  al_0.1.0.2.md  al_0.1.1.2.md  al_0.1.md  aoc-18.md  aoc-21.md  async_warmy_prequel.md  cargo-cyclic-deps.md  cargo_sync_readme.md  cheddar-0.1.md  configuration_tweaking_spare_time.md  cpp-constructors.md  default.md  entries.yaml  generalized_swap.md  getting_into_netwire.md  glsl-pest-part-1.md  glsl-pest-part-2.md  glsl-quasiquote-0.2.md  glsl-quasiquote.md  glsl-visitor.md  glsl_crate.md  hid_msi_keyboards.md  hkt-1598.md  hkt-1598.rs  hop-trie-backtrack-filling.md  index.json  interpolation-rs.md  introducing-awoo.md  introducing_luminance.md  lifetimes_and_self_borrowing.md  luminance-0.27.md  luminance-0.3.md  luminance-0.31.md  luminance-0.40.md  luminance-0.5.1.md  luminance-0.6.md  luminance-0.7.md  luminance-0.8.md  (+46 more)
run/: certbot.service  certbot.timer  docker-compose.yml
run/nginx/conf.d/: 80-to-443.conf  phaazon.net.conf
src/: Main.hs  Markdown.hs  Password.hs  PubList.hs  Routes.hs  Session.hs  Wrapper.hs
src/Route/: About.hs  Browse.hs  Contact.hs  Home.hs  Portfolio.hs  Upload.hs
static/: index.html  index.js
static/content/: home.md  portfolio.md
static/css/: index.css  output.css
static/css/highlight/: highlight.pack.js
utils/adduploader/src/: Main.hs
v2/: Cargo.toml
v2/src/: blog.rs  config.rs  file_store.rs  html.rs  main.rs  state.rs
webserver/: Cargo.toml  rustfmt.toml
webserver/media/: blog
webserver/src/: api.rs  blog.rs  cache.rs  config.rs  file_store.rs  html_wrapper.html  html_wrapper.rs  main.rs  routes.rs  state.rs
webserver/src/api/: blog.rs  browse.rs
webserver/src/routes/: blog.html  blog.rs  blog_article.html  blog_article_preview.html  browse.html  browse.rs  browse_item.html  home.html  home.rs
