name:                phaazon-net
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com

category:            Web
build-type:          Simple

cabal-version:       >=1.10

executable webserver
  ghc-options:         -threaded -W -Wall -O2
  main-is:             Main.hs
  hs-source-dirs:      app
  default-extensions:  DeriveGeneric,
                       FlexibleContexts,
                       OverloadedStrings

  build-depends:       base,
                       aeson,
                       blaze-html,
                       data-default,
                       directory,
                       filepath,
                       magic,
                       mtl,
                       mustache,
                       pandoc,
                       servant-blaze,
                       servant-server,
                       stm,
                       string-conversions,
                       text,
                       time,
                       transformers,
                       unordered-containers,
                       yaml,
                       warp

  other-modules:       Blog,
                       FileBrowser,
                       Home,
                       Markdown,
                       Portfolio,
                       ServerConfig,
                       WebApp,
                       Wrapper

  default-language:    Haskell2010
