name:                phaazon-net
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com

category:            Web
build-type:          Simple

cabal-version:       >=1.10

executable webserver
  ghc-options:         -threaded -W -Wall -O2
  main-is:             Main.hs
  hs-source-dirs:      app
  default-extensions:  DeriveGeneric,
                       FlexibleContexts,
                       OverloadedStrings

  build-depends:       base,
                       aeson >= 1.2 && < 1.5,
                       async >= 2.2 && < 2.3,
                       blaze-html >= 0.9 && < 0.10,
                       data-default >= 0.7 && < 0.8,
                       directory >= 1.3 && < 1.4,
                       filepath >= 1.4 && < 1.5,
                       mtl >= 2.2 && < 2.3,
                       mustache >= 2.3 && < 2.4,
                       pandoc >= 2.1 && < 2.8,
                       process >= 1.6 && < 1.7,
                       servant-blaze >= 0.8 && < 0.10,
                       servant-server >= 0.13 && < 0.17,
                       stm >= 2.4 && < 2.6,
                       string-conversions >= 0.4 && < 0.5,
                       text >= 1.2 && < 1.3,
                       time >= 1.8 && < 1.10,
                       transformers >= 0.5 && < 0.6,
                       unordered-containers >= 0.2 && < 0.3,
                       yaml >= 0.8 && < 0.12,
                       warp >= 3.2 && < 3.4

  other-modules:       Blog,
                       FileBrowser,
                       GPG,
                       Home,
                       Markdown,
                       Portfolio,
                       ServerConfig,
                       WebApp,
                       Wrapper

  default-language:    Haskell2010
