name:                phaazon-net
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com

category:            Web
build-type:          Simple

cabal-version:       >=1.10

executable webserver
  ghc-options:         -threaded -W -Wall -O2
  main-is:             Main.hs
  hs-source-dirs:      app
  default-extensions:  DeriveGeneric,
                       FlexibleContexts,
                       FlexibleInstances,
                       MultiParamTypeClasses,
                       OverloadedStrings

  build-depends:       base >= 4.13 && < 5,
                       aeson >= 1.2 && < 1.5,
                       async >= 2.2 && < 2.3,
                       blaze-html >= 0.9 && < 0.10,
                       bytestring >= 0.10 && < 0.11,
                       data-default >= 0.7 && < 0.8,
                       directory >= 1.3 && < 1.4,
                       feed >= 1.2 && < 1.4,
                       filepath >= 1.4 && < 1.5,
                       fsnotify == 0.3.*,
                       http-media >= 0.8 && < 0.9,
                       mtl >= 2.2 && < 2.3,
                       mustache >= 2.3 && < 2.4,
                       pandoc >= 2.1 && < 2.12,
                       process >= 1.6 && < 1.7,
                       servant >= 0.17 && < 0.18,
                       servant-blaze >= 0.8 && < 0.10,
                       servant-server >= 0.17 && < 0.18,
                       stm >= 2.4 && < 2.6,
                       string-conversions >= 0.4 && < 0.5,
                       text >= 1.2 && < 1.3,
                       time >= 1.8 && < 1.10,
                       transformers >= 0.5 && < 0.6,
                       unordered-containers >= 0.2 && < 0.3,
                       yaml >= 0.8 && < 0.12,
                       warp >= 3.2 && < 3.4,
                       xml-conduit >= 1.9 && < 1.10,
                       xml-types >= 0.3 && < 0.4

  other-modules:       Blog,
                       Feed,
                       FileBrowser,
                       GPG,
                       Home,
                       Markup,
                       ServerConfig,
                       WebApp,
                       Wrapper,
                       XML

  default-language:    Haskell2010
