name:                phaazon-net
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable phaazon.net
  ghc-options:         -threaded -W -Wall -O2
  main-is:             Main.hs     
  default-extensions:    DeriveDataTypeable
                       , OverloadedStrings
                       , TemplateHaskell
  build-depends:         base                    >= 4.5 && <4.7
                       , mtl                     == 2.1.*
                       , happstack-server        == 7.3.*
                       , happstack-clientsession == 7.2.*
                       , bytestring              == 0.10.*
                       , blaze-html              == 0.7.*
                       , text                    == 1.1.*
                       , cryptohash              == 0.11.*
                       , pandoc                  == 1.12.*
                       , data-default            == 0.5.*
                       , filepath                == 1.3.*
                       , directory               == 1.2.*
                       , lens                    == 4.2.*
                       , safecopy                == 0.8.*
                       , HDBC                    == 2.4.*
                       , HDBC-sqlite3            == 2.3.*
                       , magic                   == 1.0.*
  hs-source-dirs:      src, db
  default-language:    Haskell2010

executable adduploader
  ghc-options:         -threaded -W -Wall -O2
  main-is:             Main.hs     
  default-extensions:    DeriveDataTypeable
                       , OverloadedStrings
                       , TemplateHaskell
  build-depends:         base                    >= 4.5 && <4.7
                       , bytestring              == 0.10.*
                       , cryptohash              == 0.11.*
                       , HDBC                    == 2.4.*
                       , HDBC-sqlite3            == 2.3.*
  hs-source-dirs:      utils/adduploader/src, src
  default-language:    Haskell2010

