name:                skyoralis-io
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable skyoralis-io
  ghc-options:         -threaded -O2 -W -Wall
  main-is:             Main.hs     
  default-extensions:    OverloadedStrings
  build-depends:         base >=4.6 && <4.7
                       , mtl == 2.1.*
                       , happstack-server >=7.1 && <7.2
                       , blaze-html >=0.6 && <0.7
                       , text == 0.11.*
                       , pandoc == 1.12.*
                       , data-default == 0.5.*
                       , filepath == 1.3.*
                       , directory == 1.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010