cabal-version:           >= 1.10
name:                    api
version:                 0.1.0.0
synopsis:                phaazon.net backend API
license:                 BSD3
license-file:            LICENSE
author:                  Dimitri Sabadie
maintainer:              dimitri.sabadie@gmail.com
build-type:              Simple
extra-source-files:      CHANGELOG.md

executable api
  ghc-options:           -threaded -W -Wall -O2
  hs-source-dirs:        src
  main-is:               Main.hs
  default-extensions:    DeriveGeneric
                       , FlexibleContexts
                       , FlexibleInstances
                       , LambdaCase
                       , MultiParamTypeClasses
                       , OverloadedStrings
                       , ScopedTypeVariables
  build-depends:         base >= 4.14 && < 4.15
                       , aeson >= 1.5.6 && < 1.6
                       , data-default >= 0.7 && < 0.8
                       , directory >= 1.3.6 && < 1.4
                       , filepath >= 1.4.2 && < 1.5
                       , fsnotify >= 0.3
                       , process >= 1.6.13.1 && < 1.7
                       , stm >= 2.5 && < 2.6
                       , unordered-containers >= 0.2.14 && < 0.3
                       , warp >= 3.3.17 && < 3.4
                       , yaml >= 0.11.5 && < 0.12
  other-modules:         Config
                       , State
                       , Upload

  default-language:      Haskell2010
