cabal-version:           >= 1.10
name:                    api
version:                 0.1.0.0
synopsis:                phaazon.net backend API
license:                 BSD3
license-file:            LICENSE
author:                  Dimitri Sabadie
maintainer:              dimitri.sabadie@gmail.com
build-type:              Simple
extra-source-files:      CHANGELOG.md

executable api
  default-language:      Haskell2010
  ghc-options:           -threaded -W -Wall -O2
  hs-source-dirs:        src
  main-is:               Main.hs

  default-extensions:
    DeriveGeneric
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    TypeOperators

  build-depends:
    base >= 4.14 && < 4.15,
    aeson >= 1.5.6 && < 1.6,
    blaze-html >= 0.9.1 && < 0.10,
    bytestring >= 0.10 && < 0.11,
    data-default >= 0.7 && < 0.8,
    directory >= 1.3.6 && < 1.4,
    feed >= 1.2 && < 1.4,
    filepath >= 1.4.2 && < 1.5,
    fsnotify >= 0.2.1 && < 0.3,
    hashable >= 1.3.2 && < 1.4,
    http-api-data >= 0.4.3 && < 0.5,
    http-media >= 0.8 && < 0.9,
    mtl >= 2.2.2 && < 2.3,
    pandoc >= 2.14 && < 2.15,
    process >= 1.6.13 && < 1.7,
    servant >= 0.18.3 && < 0.19,
    servant-blaze >= 0.9.1 && < 0.10,
    servant-server >= 0.18.3 && < 0.19,
    stm >= 2.5 && < 2.6,
    string-conversions >= 0.4 && < 0.5,
    text >= 1.2.4 && < 1.3,
    time >= 1.11 && < 1.12,
    unordered-containers >= 0.2.14 && < 0.3,
    warp >= 3.3.17 && < 3.4,
    xml-conduit >= 1.9 && < 1.10,
    xml-types >= 0.3.8 && < 0.4

  other-modules:
    API,
    Blog,
    Config,
    JSON,
    Markup,
    Routes,
    State,
    Upload,
    XML
